--- a/src/pages/test-api.astro
+++ b/src/pages/test-api.astro
@@ -18,12 +18,13 @@ const collections = [
 
 // Define API endpoints
 const apiEndpoints = {
-  export: '/api/export',
-  ...collections.reduce((acc, collection) => {
-    acc[collection] = `/api/${collection}`;
-    return acc;
-  }, {})
+  export: '/api/export'
 };
+
+// Add collection endpoints
+collections.forEach(collection => {
+  apiEndpoints[collection] = `/api/${collection}`;
+});
 ---
 
 <Layout title="API Test">
@@ -174,13 +175,28 @@ const apiEndpoints = {
         ))}
       </div>
     </div>
+    
+    <!-- Hidden inputs to store collection data -->
+    <div style="display: none;">
+      <input type="hidden" id="collectionsData" value={collections.join(',')} />
+      <input type="hidden" id="exportApiEndpoint" value={apiEndpoints.export} />
+    </div>
   </main>
 </Layout>
 
 <script>
-  // Get variables from Astro
-  const apiEndpoints = JSON.parse(document.currentScript.getAttribute('data-api-endpoints'));
-  const collections = JSON.parse(document.currentScript.getAttribute('data-collections'));
+  // Get collections from hidden input
+  const collectionsData = document.getElementById('collectionsData').value.split(',');
+  
+  // Create API endpoints object
+  const apiEndpoints = {
+    export: document.getElementById('exportApiEndpoint').value
+  };
+  
+  // Add collection endpoints
+  collectionsData.forEach(collection => {
+    apiEndpoints[collection] = `/api/${collection}`;
+  });
   
   // Update direct API URL when collection changes
   document.getElementById('directCollection')?.addEventListener('change', (e) => {
@@ -536,12 +552,6 @@ const apiEndpoints = {
       }
     });
   });
-</script>
-
-<script is:inline>
-  // Serialize data for the client-side script
-  document.currentScript.setAttribute('data-api-endpoints', JSON.stringify({apiEndpoints}));
-  document.currentScript.setAttribute('data-collections', JSON.stringify({collections}));
 </script>
 
 <style>
